--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,3 @@
-.access.php
-.bottom.menu.php
-.htaccess
-.section.php
-.top.menu.php
-404.php
-/bitrix
-/company
-/contacts
-/include
-index.htm
-index.php
-/login
-/news
-/products
-/search
-/services
-/upload
-urlrewrite.php
-web.config
-composer.phar
-bitrixsetup.php
+*
+!.gitignore
+!/local
